- Incorporar módulo de internacionalización NGX-Translate -> es/en - Creado cambio idioma en cabecera menú junto a titulo. - Traducidos menú principal, y comprame cafe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
-<app-menu>
+<!--
+<div>
+  <span>Switch languages at runtime: </span>
+  <button (click)="useLanguage('es')">es</button>
+  <button (click)="useLanguage('en')">en</button>
+</div>
+-->
+<app-menu (useLanguagePadre)="useLanguage($event)">
   <router-outlet />
 </app-menu>
 
