--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
     [matRippleUnbounded]="unbounded"
     [matRippleRadius]="radius" >
 
-    <h2>Principal</h2>
+    <h2>{{ 'generadores.jpromocion.menu.principal' | translate }}</h2>
       <!--EL item para rellenar el api-key con el que funcionaran todas las invocaciones-->
     <mat-form-field style="min-width: 200px;width: auto !important;">
       <mat-label>API-Key</mat-label>
