--- a/src/app/shared/components/menu/menu.component.scss
+++ b/src/app/shared/components/menu/menu.component.scss
@@ -82,3 +82,21 @@ mat-sidenav-content {
 
 
 
+.divTituloIdioma {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+/* Responsive layout - makes a one column layout instead of a two-column layout */
+@media (max-width: 800px) {
+  .divTituloIdioma {
+    flex-direction: column;
+  }
+}
+
+/**
+ * Para asignar dinamicamente al idioma no seleccionada
+ */
+.idiomaNoSele{
+  filter: grayscale(100%);
+}
