- Banderas lenguaje con sepia, transición y desenfoque - Traducimos principal y documentos

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,14 +1,14 @@
 
 
 <div class="seccionCentrada tracking-in-expand">
-  <h1 class="tracking-in-expand">Generadores de jpromocion</h1>
+  <h1 class="tracking-in-expand">{{ 'generadores.jpromocion.titulocompleto' | translate }}</h1>
 
 
   <app-comprame-cafe></app-comprame-cafe>
 
   <h3 class="tracking-in-expand" style="margin-top: 10px;">FrontEnd Angular</h3>
   <div>
-    <p>Versión v.{{ versionApp }}</p>
+    <p>{{ 'generadores.jpromocion.acercade.version' | translate }} v.{{ versionApp }}</p>
   </div>
 
   <div class="wrapperLogo">
@@ -29,7 +29,7 @@
 
   <h3 class="tracking-in-expand">API REST Backend</h3>
   <div>
-    <p>Versión {{ versionApiRest }}</p>
+    <p>{{ 'generadores.jpromocion.acercade.version' | translate }} {{ versionApiRest }}</p>
   </div>
 
   <div class="wrapperLogo">
@@ -49,7 +49,7 @@
   <br/>
   <br/>
 
-  <h1 class="tracking-in-expand">Autor</h1>
+  <h1 class="tracking-in-expand">{{ 'generadores.jpromocion.acercade.autor' | translate }}</h1>
 
   <h2 class="tracking-in-expand">Jose Javier Gálvez Gómez (jpromocion)</h2>
 
@@ -62,7 +62,7 @@
   </div>
 
 
-  <h2 class="tracking-in-expand">Información de contacto</h2>
+  <h2 class="tracking-in-expand">{{ 'generadores.jpromocion.acercade.infocontacto' | translate }}</h2>
 
   <div>
     <h3 class="tracking-in-expand">LinkedIn</h3>
@@ -99,7 +99,7 @@
     <br/>
     <br/>
 
-    <h3 class="tracking-in-expand">Enviar email</h3>
+    <h3 class="tracking-in-expand">{{ 'generadores.jpromocion.acercade.enviaremail' | translate }}</h3>
     <div>
       <div class="wrapperLogo">
         <div class="icon email">
