--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -12,11 +12,11 @@
     <h2>{{ 'generadores.jpromocion.menu.principal' | translate }}</h2>
       <!--EL item para rellenar el api-key con el que funcionaran todas las invocaciones-->
     <mat-form-field style="min-width: 200px;width: auto !important;">
-      <mat-label>API-Key</mat-label>
+      <mat-label>{{ 'generadores.jpromocion.principal.apikey.label' | translate }}</mat-label>
       <input matInput id="apiKey" [type]="visibilityApiKey ? 'password' : 'text'" [(ngModel)]="apiKey" maxlength="100" (input)="cambioValorApiKey($event)" >
       <mat-icon matSuffix (click)="visibilityApiKey = !visibilityApiKey">{{visibilityApiKey ? 'visibility_off' : 'visibility'}}</mat-icon>
-      <mat-icon matSuffix matTooltip="Introduzca la api-key para la comunicación con el servicio REST">help</mat-icon>
-      <mat-hint>Introduzca la api-key para la comunicación con el servicio REST</mat-hint>
+      <mat-icon matSuffix matTooltip="{{ 'generadores.jpromocion.principal.apikey.tooltip' | translate }}">help</mat-icon>
+      <mat-hint>{{ 'generadores.jpromocion.principal.apikey.tooltip' | translate }}</mat-hint>
     </mat-form-field>
 
     <input type="hidden" [(ngModel)]="mostrarApiUrlPorAsegurar"  >
