--- a/src/app/shared/components/menu/menu.component.scss
+++ b/src/app/shared/components/menu/menu.component.scss
@@ -1,3 +1,5 @@
+@use '../../../../styles' as stylesGeneral;
+
 .sidenav-container {
   height: 100%;
 }
@@ -97,6 +99,18 @@ mat-sidenav-content {
 /**
  * Para asignar dinamicamente al idioma no seleccionada
  */
-.idiomaNoSele{
-  filter: grayscale(100%);
+.idiomaSele{
+  filter: grayscale(0%) sepia(60%);
+  //filter: grayscale(0%) sepia(60%);
+  transition: all 2s ease;
 }
+
+
+
+.idiomaNoSele{
+  //filter: grayscale(100%);
+  //NOTA: poner el sepia 0% para que funcione la transicion
+  filter: grayscale(100%) sepia(0%) blur(2px) brightness(80%) contrast(120%);
+  transition: all 2s ease;
+}
+
