--- a/src/app/genera-perfiles/genera-perfiles.component.html
+++ b/src/app/genera-perfiles/genera-perfiles.component.html
@@ -25,12 +25,12 @@
       </mat-button-toggle-group>
     </div>
     <div class="caja c3">
-      <label style="margin-left: 5px;">{{ 'generadores.jpromocion.perfil.entrada.tipoletra.label' | translate }}: </label>
+      <label style="margin-left: 5px;">{{ 'generadores.jpromocion.generarcomunes.entrada.tipoletra.label' | translate }}: </label>
       <mat-button-toggle-group name="tipoletra" aria-label="Tipo letra de campos texto" [(ngModel)]="tipoLetra"  style="margin-left: 10px;">
-        <mat-button-toggle value="s">{{ 'generadores.jpromocion.perfil.entrada.tipoletra.valors' | translate }}</mat-button-toggle>
-        <mat-button-toggle value="M">{{ 'generadores.jpromocion.perfil.entrada.tipoletra.valormay' | translate }}</mat-button-toggle>
-        <mat-button-toggle value="m">{{ 'generadores.jpromocion.perfil.entrada.tipoletra.valormin' | translate }}</mat-button-toggle>
-        <mat-button-toggle value="c">{{ 'generadores.jpromocion.perfil.entrada.tipoletra.valorc' | translate }}</mat-button-toggle>
+        <mat-button-toggle value="s">{{ 'generadores.jpromocion.generarcomunes.entrada.tipoletra.valors' | translate }}</mat-button-toggle>
+        <mat-button-toggle value="M">{{ 'generadores.jpromocion.generarcomunes.entrada.tipoletra.valormay' | translate }}</mat-button-toggle>
+        <mat-button-toggle value="m">{{ 'generadores.jpromocion.generarcomunes.entrada.tipoletra.valormin' | translate }}</mat-button-toggle>
+        <mat-button-toggle value="c">{{ 'generadores.jpromocion.generarcomunes.entrada.tipoletra.valorc' | translate }}</mat-button-toggle>
       </mat-button-toggle-group>
     </div>
   </div>
