--- a/src/app/genera-textos/genera-textos.component.html
+++ b/src/app/genera-textos/genera-textos.component.html
@@ -1,30 +1,30 @@
-<h2 class="tracking-in-expand">Textos</h2>
+<h2 class="tracking-in-expand">{{ 'generadores.jpromocion.menu.textos' | translate }}</h2>
 
 <div class="panelFluidoSegundoNivel bounce-in-bottom">
 
   <div class="grid-layout">
 
     <div class="caja c0">
-      <h3>Filtros</h3>
+      <h3>{{ 'generadores.jpromocion.generarcomunes.frame.filtros' | translate }}</h3>
     </div>
   </div>
 
   <div class="grid-layout">
     <div class="caja c1">
-      <label>Idioma: </label>
+      <label>{{ 'generadores.jpromocion.texto.entrada.idioma.label' | translate }}: </label>
       <mat-button-toggle-group name="idioma" aria-label="idioma" [(ngModel)]="idioma" style="margin-left: 10px;">
-        <mat-button-toggle value="spanish">Castellano</mat-button-toggle>
-        <mat-button-toggle value="latin">Latín</mat-button-toggle>
-        <mat-button-toggle value="english">Inglés</mat-button-toggle>
+        <mat-button-toggle value="spanish">{{ 'generadores.jpromocion.texto.entrada.idioma.valorsp' | translate }}</mat-button-toggle>
+        <mat-button-toggle value="latin">{{ 'generadores.jpromocion.texto.entrada.idioma.valorlt' | translate }}</mat-button-toggle>
+        <mat-button-toggle value="english">{{ 'generadores.jpromocion.texto.entrada.idioma.valoreng' | translate }}</mat-button-toggle>
       </mat-button-toggle-group>
     </div>
 
     <div class="caja c2">
-      <label>Tipo: </label>
+      <label>{{ 'generadores.jpromocion.texto.entrada.tipotexto.label' | translate }}: </label>
       <mat-button-toggle-group name="tipo" aria-label="tipo" [(ngModel)]="tipoGeneracion" style="margin-left: 10px;" (change)="onChangeTipoGeneracion($event)">
-        <mat-button-toggle value="c">Carácteres</mat-button-toggle>
-        <mat-button-toggle value="w">Palabras</mat-button-toggle>
-        <mat-button-toggle value="p">Párrafos</mat-button-toggle>
+        <mat-button-toggle value="c">{{ 'generadores.jpromocion.texto.entrada.tipotexto.valorc' | translate }}</mat-button-toggle>
+        <mat-button-toggle value="w">{{ 'generadores.jpromocion.texto.entrada.tipotexto.valorw' | translate }}</mat-button-toggle>
+        <mat-button-toggle value="p">{{ 'generadores.jpromocion.texto.entrada.tipotexto.valorp' | translate }}</mat-button-toggle>
       </mat-button-toggle-group>
     </div>
   </div>
@@ -32,36 +32,40 @@
   <div class="grid-layout">
     <div class="caja c3">
       <mat-form-field style="width: 250px !important;">
-        <mat-label>Cantidad(carac./palabra./parraf.)</mat-label>
+        <mat-label>{{ 'generadores.jpromocion.texto.entrada.cantidad.label' | translate }}</mat-label>
         <input matInput id="cantidad" type="number" min="1" max="1000"
-          placeholder="Número de carácteres, palabras o párrafos a generar" [(ngModel)]="cantidad">
+          placeholder="{{ 'generadores.jpromocion.texto.entrada.cantidad.placeholder' | translate }}" [(ngModel)]="cantidad">
         <mat-icon matSuffix
-          matTooltip="Si el tipo es 'Carácteres' será el número de carácteres a generar, si el tipo es 'Palabras' será el número de palabras a generar, y si es 'Párrafos' será el número de párrafos a generar">help</mat-icon>
+          matTooltip="{{ 'generadores.jpromocion.texto.entrada.cantidad.tooltip' | translate }}">help</mat-icon>
       </mat-form-field>
     </div>
 
     <div class="caja c4">
-      <label>Tipo letra: </label>
+      <label>{{ 'generadores.jpromocion.generarcomunes.entrada.tipoletra.label' | translate }}: </label>
       <mat-button-toggle-group name="tipoletra" aria-label="Tipo letra de campos texto" [(ngModel)]="tipoLetra"
         style="margin-left: 10px;">
-        <mat-button-toggle value="s">Sin formato</mat-button-toggle>
-        <mat-button-toggle value="M">Mayúsculas</mat-button-toggle>
-        <mat-button-toggle value="m">Minúsculas</mat-button-toggle>
-        <mat-button-toggle value="c">Camel case</mat-button-toggle>
+        <mat-button-toggle value="s">{{ 'generadores.jpromocion.generarcomunes.entrada.tipoletra.valors' | translate }}</mat-button-toggle>
+        <mat-button-toggle value="M">{{ 'generadores.jpromocion.generarcomunes.entrada.tipoletra.valormay' | translate }}</mat-button-toggle>
+        <mat-button-toggle value="m">{{ 'generadores.jpromocion.generarcomunes.entrada.tipoletra.valormin' | translate }}</mat-button-toggle>
+        <mat-button-toggle value="c">{{ 'generadores.jpromocion.generarcomunes.entrada.tipoletra.valorc' | translate }}</mat-button-toggle>
       </mat-button-toggle-group>
     </div>
   </div>
 
   <div class="grid-layout">
     <div class="caja c5">
-      <button type="button" mat-fab class="botonRotatorio" aria-label="Generar caracteres" (click)="onClickBotonGenerarTexto()"
-        matTooltip="Pulsar para generar" matTooltipPosition="below">
+      <button type="button" mat-fab class="botonRotatorio"
+        attr.aria-label="{{ 'generadores.jpromocion.texto.boton.generartexto.label' | translate }}"
+        (click)="onClickBotonGenerarTexto()"
+        matTooltip="{{ 'generadores.jpromocion.generarcomunes.boton.generar.tooltip' | translate }}" matTooltipPosition="below">
         <mat-icon>refresh</mat-icon>
       </button>
 
       <button type="button" mat-fab class="botonRotatorio" [@encogimientoAnimation] *ngIf="textoGenerado"
-        style="margin-left: 5px;" aria-label="Limpiar resultado" (click)="onClickLimpiarTexto()"
-        matTooltip="Pulsar para limpiar los caracteres" matTooltipPosition="below">
+        style="margin-left: 5px;"
+        attr.aria-label="{{ 'generadores.jpromocion.generarcomunes.boton.limpiar.label' | translate }}"
+        (click)="onClickLimpiarTexto()"
+        matTooltip="{{ 'generadores.jpromocion.generarcomunes.boton.limpiar.tooltip' | translate }}" matTooltipPosition="below">
         <mat-icon>delete</mat-icon>
       </button>
     </div>
@@ -70,10 +74,10 @@
   <div class="grid-layout">
     <div class="caja c6">
       <mat-form-field [@encogimientoAnimation] *ngIf="textoGenerado" style="margin-top: 10px;margin-left: 20px; width: 100%;">
-        <mat-label>Texto generado</mat-label>
+        <mat-label>{{ 'generadores.jpromocion.texto.salida.textogenerado.label' | translate }}</mat-label>
         <textarea matInput rows="6" (click)="onSelectDato(transformaTexto(textoGenerado))" readonly="true" value="{{textoGenerado | caseTransformer: tipoLetra}}">
         </textarea>
-        <mat-icon matSuffix matTooltip="Pulsar para copiar">help</mat-icon>
+        <mat-icon matSuffix matTooltip="{{ 'generadores.jpromocion.generarcomunes.boton.copiar.tooltip' | translate }}">help</mat-icon>
       </mat-form-field>
     </div>
 
