--- a/src/app/genera-textos/genera-textos.component.html
+++ b/src/app/genera-textos/genera-textos.component.html
@@ -42,7 +42,7 @@
 
     <div class="caja c4">
       <label>{{ 'generadores.jpromocion.generarcomunes.entrada.tipoletra.label' | translate }}: </label>
-      <mat-button-toggle-group name="tipoletra" aria-label="Tipo letra de campos texto" [(ngModel)]="tipoLetra"
+      <mat-button-toggle-group name="tipoletra" [(ngModel)]="tipoLetra"
         style="margin-left: 10px;">
         <mat-button-toggle value="s">{{ 'generadores.jpromocion.generarcomunes.entrada.tipoletra.valors' | translate }}</mat-button-toggle>
         <mat-button-toggle value="M">{{ 'generadores.jpromocion.generarcomunes.entrada.tipoletra.valormay' | translate }}</mat-button-toggle>
