--- a/src/app/genera-archivos/genera-archivos.component.html
+++ b/src/app/genera-archivos/genera-archivos.component.html
@@ -1,4 +1,4 @@
-<h2 class="tracking-in-expand">Archivos</h2>
+<h2 class="tracking-in-expand">{{ 'generadores.jpromocion.menu.archivos' | translate }}</h2>
 
 <div class="panelFluidoSegundoNivel bounce-in-bottom">
 
@@ -6,19 +6,19 @@
 
     <div class="caja c1">
       <mat-card appearance="outlined">
-        <mat-card-header>Base 64 (codificar)</mat-card-header>
+        <mat-card-header>{{ 'generadores.jpromocion.archivos.frame.base64codi' | translate }}</mat-card-header>
         <mat-card-content>
 
           <div>
-            <label>Tipo entrada: </label>
+            <label>{{ 'generadores.jpromocion.archivos.entrada.tipoentrada.label' | translate }}: </label>
             <mat-button-toggle-group name="codifica64Entrada" aria-label="codifica64Entrada" [(ngModel)]="codifica64Entrada" style="margin-left: 10px;margin-top: 10px;">
-              <mat-button-toggle value="texto">Texto</mat-button-toggle>
-              <mat-button-toggle value="archivo">Archivo</mat-button-toggle>
+              <mat-button-toggle value="texto">{{ 'generadores.jpromocion.archivos.entrada.tipoentrada.valortexto' | translate }}</mat-button-toggle>
+              <mat-button-toggle value="archivo">{{ 'generadores.jpromocion.archivos.entrada.tipoentrada.valorarchivo' | translate }}</mat-button-toggle>
             </mat-button-toggle-group>
           </div>
 
           <mat-form-field style="width: 100% !important;margin-top: 10px;margin-left: 5px;" [@encogimientoAnimation] *ngIf="codifica64Entrada && codifica64Entrada == 'texto'">
-            <mat-label>Valor a codificar</mat-label>
+            <mat-label>{{ 'generadores.jpromocion.archivos.entrada.valorcodificar.label' | translate }}</mat-label>
             <textarea matInput id="textoABase64" type="text" [(ngModel)]="textoABase64" rows="6">
             </textarea>
           </mat-form-field>
@@ -27,29 +27,33 @@
            Alternativa: https://stackoverflow.com/questions/52622061/how-to-use-input-type-file-in-angular-material
           -->
           <!-- <input type="file" *ngIf="codifica64Entrada && codifica64Entrada == 'archivo'" (change)="handleSubirFileCodifica64($event)"/> -->
-          <button type="button" mat-raised-button  [@entradaLateralAnimation] *ngIf="codifica64Entrada && codifica64Entrada == 'archivo'" (click)="fileInputParamCodiBase64.click()">Elegir archivo</button>
+          <button type="button" mat-raised-button  [@entradaLateralAnimation] *ngIf="codifica64Entrada && codifica64Entrada == 'archivo'" (click)="fileInputParamCodiBase64.click()">
+            {{ 'generadores.jpromocion.generarcomunes.entrada.elegirarchivo.label' | translate }}
+          </button>
           <input #fileInputParamCodiBase64 type="file" hidden (change)="handleSubirFileCodifica64($event)" id="fileParamCodiBase64">
           <span [@encogimientoAnimation] *ngIf="codifica64Entrada && codifica64Entrada == 'archivo' && nombreArchivoBase64 != ''">{{nombreArchivoBase64}}</span>
 
           <div>
-            <button type="button" mat-fab class="botonRotatorio" aria-label="Codificar base64" (click)="onClickBotonCodificarBase64()"
-              matTooltip="Pulsar para codificar" matTooltipPosition="below">
+            <button type="button" mat-fab class="botonRotatorio" (click)="onClickBotonCodificarBase64()"
+              attr.aria-label="{{ 'generadores.jpromocion.archivos.boton.codificar64.label' | translate }}"
+              matTooltip="{{ 'generadores.jpromocion.archivos.boton.codificar64.tooltip' | translate }}" matTooltipPosition="below">
               <mat-icon>code</mat-icon>
             </button>
 
             <button type="button" mat-fab class="botonRotatorio" [@encogimientoAnimation] *ngIf="textoCodificadoBase64"
-              style="margin-left: 5px;" aria-label="Limpiar resultado" (click)="onClickLimpiarBase64()"
-              matTooltip="Pulsar para limpiar codificado" matTooltipPosition="below">
+              style="margin-left: 5px;" (click)="onClickLimpiarBase64()"
+              attr.aria-label="{{ 'generadores.jpromocion.generarcomunes.boton.limpiar.label' | translate }}"
+              matTooltip="{{ 'generadores.jpromocion.generarcomunes.boton.limpiar.tooltip' | translate }}" matTooltipPosition="below">
               <mat-icon>delete</mat-icon>
             </button>
           </div>
 
           <div>
             <mat-form-field [@entradaLateralAnimation] *ngIf="textoCodificadoBase64" style="width: 100% !important; margin-top: 10px;margin-left: 5px;">
-              <mat-label>Codificado en Base 64</mat-label>
+              <mat-label>{{ 'generadores.jpromocion.archivos.salida.base64codi.label' | translate }}</mat-label>
               <textarea matInput rows="6" (click)="onSelectDato(textoCodificadoBase64)" readonly="true" value="{{textoCodificadoBase64}}">
               </textarea>
-              <mat-icon matSuffix matTooltip="Pulsar para copiar">help</mat-icon>
+              <mat-icon matSuffix matTooltip="{{ 'generadores.jpromocion.generarcomunes.boton.copiar.tooltip' | translate }}">help</mat-icon>
             </mat-form-field>
           </div>
 
@@ -59,42 +63,44 @@
 
     <div class="caja c2">
       <mat-card appearance="outlined">
-        <mat-card-header>Base 64 (decodificar)</mat-card-header>
+        <mat-card-header>{{ 'generadores.jpromocion.archivos.frame.base64encodi' | translate }}</mat-card-header>
         <mat-card-content>
 
           <div>
-            <label>Tipo salida: </label>
+            <label>{{ 'generadores.jpromocion.archivos.entrada.tiposalida.label' | translate }}: </label>
             <mat-button-toggle-group name="decodifica64Salida" aria-label="decodifica64Salida" [(ngModel)]="decodifica64Salida" style="margin-left: 10px;margin-top: 10px;">
-              <mat-button-toggle value="texto">Texto</mat-button-toggle>
-              <mat-button-toggle value="archivo">Archivo</mat-button-toggle>
+              <mat-button-toggle value="texto">{{ 'generadores.jpromocion.archivos.entrada.tiposalida.valortexto' | translate }}</mat-button-toggle>
+              <mat-button-toggle value="archivo">{{ 'generadores.jpromocion.archivos.entrada.tiposalida.valorarchivo' | translate }}</mat-button-toggle>
             </mat-button-toggle-group>
           </div>
 
           <mat-form-field style="width: 100% !important; margin-top: 10px;margin-left: 5px;">
-            <mat-label>Valor a decodificar</mat-label>
+            <mat-label>{{ 'generadores.jpromocion.archivos.entrada.valordecodificar.label' | translate }}</mat-label>
             <textarea matInput id="textoDeBase64" type="text" [(ngModel)]="textoDeBase64" rows="6">
             </textarea>
           </mat-form-field>
 
           <div>
-            <button type="button" mat-fab class="botonRotatorio" aria-label="Decodificar base64" (click)="onClickBotonDecodificarBase64()"
-              matTooltip="Pulsar para decodificar" matTooltipPosition="below">
+            <button type="button" mat-fab class="botonRotatorio"  (click)="onClickBotonDecodificarBase64()"
+              attr.aria-label="{{ 'generadores.jpromocion.archivos.boton.decodificar64.label' | translate }}"
+              matTooltip="{{ 'generadores.jpromocion.archivos.boton.decodificar64.tooltip' | translate }}" matTooltipPosition="below">
               <mat-icon>code</mat-icon>
             </button>
 
             <button type="button" mat-fab class="botonRotatorio" [@encogimientoAnimation] *ngIf="textoDecodificadoBase64"
-              style="margin-left: 5px;" aria-label="Limpiar resultado" (click)="onClickLimpiarDecoBase64()"
-              matTooltip="Pulsar para limpiar decodificado" matTooltipPosition="below">
+              style="margin-left: 5px;" (click)="onClickLimpiarDecoBase64()"
+              attr.aria-label="{{ 'generadores.jpromocion.generarcomunes.boton.limpiar.label' | translate }}"
+              matTooltip="{{ 'generadores.jpromocion.generarcomunes.boton.limpiar.tooltip' | translate }}" matTooltipPosition="below">
               <mat-icon>delete</mat-icon>
             </button>
           </div>
 
           <div>
             <mat-form-field [@entradaLateralAnimation] *ngIf="textoDecodificadoBase64" style="width: 100% !important; margin-top: 10px;margin-left: 5px;">
-              <mat-label>Texto decodificado</mat-label>
+              <mat-label>{{ 'generadores.jpromocion.archivos.salida.base64decodi.label' | translate }}</mat-label>
               <textarea matInput rows="6" (click)="onSelectDato(textoDecodificadoBase64)" readonly="true" value="{{textoDecodificadoBase64}}">
               </textarea>
-              <mat-icon matSuffix matTooltip="Pulsar para copiar">help</mat-icon>
+              <mat-icon matSuffix matTooltip="{{ 'generadores.jpromocion.generarcomunes.boton.copiar.tooltip' | translate }}">help</mat-icon>
             </mat-form-field>
           </div>
 
@@ -104,38 +110,42 @@
 
     <div class="caja c3">
       <mat-card appearance="outlined">
-        <mat-card-header>Obtener Hash</mat-card-header>
+        <mat-card-header>{{ 'generadores.jpromocion.archivos.frame.hash' | translate }}</mat-card-header>
         <mat-card-content>
 
           <mat-form-field style="width: 350px !important; margin-top: 10px;margin-left: 5px;">
-            <mat-label>Seleccionar tipo algoritmo</mat-label>
-            <mat-select [(ngModel)]="selectedTipoHash">
+            <mat-label>{{ 'generadores.jpromocion.archivos.entrada.tipohash.label' | translate }}</mat-label>
+            <mat-select [(ngModel)]="selectedTipoHash" placeholder="{{ 'generadores.jpromocion.archivos.entrada.tipohash.placeholder' | translate }}">
               @for (tipo of listaTiposHash; track tipo) {
                 <mat-option [value]="tipo.codigo">{{tipo.descripcion}}</mat-option>
               }
             </mat-select>
           </mat-form-field>
 
-          <button type="button" mat-raised-button (click)="fileParamHashInput.click()" style="margin-top: 10px;margin-left: 5px;">Elegir archivo</button>
+          <button type="button" mat-raised-button (click)="fileParamHashInput.click()" style="margin-top: 10px;margin-left: 5px;">
+            {{ 'generadores.jpromocion.generarcomunes.entrada.elegirarchivo.label' | translate }}
+          </button>
           <input #fileParamHashInput type="file" hidden (change)="handleSubirFileHash($event)" id="fileParamHash">
           <span [@encogimientoAnimation] *ngIf="nombreArchivoHash != ''">{{nombreArchivoHash}}</span>
 
           <div>
-            <button type="button" mat-fab class="botonRotatorio" aria-label="Obtener hash" (click)="onClickBotonHash()"
-              matTooltip="Pulsar para obtener hash" matTooltipPosition="below">
+            <button type="button" mat-fab class="botonRotatorio" (click)="onClickBotonHash()"
+              attr.aria-label="{{ 'generadores.jpromocion.archivos.boton.generarhash.label' | translate }}"
+              matTooltip="{{ 'generadores.jpromocion.archivos.boton.generarhash.tooltip' | translate }}" matTooltipPosition="below">
               <mat-icon>code</mat-icon>
             </button>
 
             <button type="button" mat-fab class="botonRotatorio" [@encogimientoAnimation] *ngIf="textoHash"
-              style="margin-left: 5px;" aria-label="Limpiar resultado" (click)="onClickLimpiarHash()"
-              matTooltip="Pulsar para limpiar hash" matTooltipPosition="below">
+              style="margin-left: 5px;"  (click)="onClickLimpiarHash()"
+              attr.aria-label="{{ 'generadores.jpromocion.generarcomunes.boton.limpiar.label' | translate }}"
+              matTooltip="{{ 'generadores.jpromocion.generarcomunes.boton.limpiar.tooltip' | translate }}" matTooltipPosition="below">
               <mat-icon>delete</mat-icon>
             </button>
           </div>
 
           <div>
             <button mat-flat-button [@entradaLateralAnimation] *ngIf="textoHash" type="button" (click)="onSelectDato(textoHash)"
-              matTooltip="Pulsar para copiar" matTooltipPosition="below" style="margin-top: 10px;margin-left: 5px;">
+              matTooltip="{{ 'generadores.jpromocion.generarcomunes.boton.copiar.tooltip' | translate }}" matTooltipPosition="below" style="margin-top: 10px;margin-left: 5px;">
               <span class="texto">{{textoHash}}</span>
             </button>
           </div>
@@ -146,16 +156,20 @@
 
     <div class="caja c3">
       <mat-card appearance="outlined">
-        <mat-card-header>Generar Zip</mat-card-header>
+        <mat-card-header>{{ 'generadores.jpromocion.archivos.frame.zip' | translate }}</mat-card-header>
         <mat-card-content>
 
-          <button type="button" mat-raised-button (click)="fileParamZipInput.click()" style="margin-top: 10px;margin-left: 5px;">Elegir archivo/s</button>
+          <button type="button" mat-raised-button (click)="fileParamZipInput.click()" style="margin-top: 10px;margin-left: 5px;">
+            {{ 'generadores.jpromocion.generarcomunes.entrada.elegirarchivo.labelplurarl' | translate }}
+          </button>
           <input #fileParamZipInput type="file" hidden (change)="handleSubirFilesZip($event)" id="fileParamZip" multiple="multiple">
           <span [@encogimientoAnimation] *ngIf="nombreArchivosZip != ''">{{nombreArchivosZip}}</span>
 
           <div>
             <button id="btnDescargarZip" type="button" mat-fab class="botonRotatorio" aria-label="Generar zip" (click)="onClickBotonZip()"
-              matTooltip="Pulsar para generar zip" matTooltipPosition="below">
+              matTooltip="Pulsar para generar zip"
+              attr.aria-label="{{ 'generadores.jpromocion.archivos.boton.generarzip.label' | translate }}"
+              matTooltip="{{ 'generadores.jpromocion.archivos.boton.generarzip.tooltip' | translate }}" matTooltipPosition="below">
               <mat-icon id="iconoDescargarZip">download</mat-icon>
             </button>
           </div>
