- principal, acerca de: información sobre el tema de la aplicacion

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,6 +3,8 @@
 <div class="seccionCentrada tracking-in-expand">
   <h1 class="tracking-in-expand">{{ 'generadores.jpromocion.titulocompleto' | translate }}</h1>
 
+  <p>{{ 'generadores.jpromocion.descripcion' | translate }}</p>
+
 
   <app-comprame-cafe></app-comprame-cafe>
 
