--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -23,6 +23,9 @@
 
     <app-comprame-cafe style="margin-top: 40px;"></app-comprame-cafe>
 
+    <div style="margin-top: 40px; max-width: 400px;">
+      <p>{{ 'generadores.jpromocion.descripcion' | translate }}</p>
+    </div>
 
     <app-messages style="margin-top: 20px;"></app-messages>
 
