- principal, acerca de: icono aplicacion

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,8 +5,9 @@
 
   <p>{{ 'generadores.jpromocion.descripcion' | translate }}</p>
 
+  <img class="tracking-in-expand" src="/generador.ico" alt="logo">
 
-  <app-comprame-cafe></app-comprame-cafe>
+  <app-comprame-cafe style="display: block;"></app-comprame-cafe>
 
   <h3 class="tracking-in-expand" style="margin-top: 10px;">FrontEnd Angular</h3>
   <div>
