--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,22 +10,26 @@
     [matRippleRadius]="radius" >
 
     <h2>{{ 'generadores.jpromocion.menu.principal' | translate }}</h2>
-      <!--EL item para rellenar el api-key con el que funcionaran todas las invocaciones-->
-    <mat-form-field style="min-width: 200px;width: auto !important;">
-      <mat-label>{{ 'generadores.jpromocion.principal.apikey.label' | translate }}</mat-label>
-      <input matInput id="apiKey" [type]="visibilityApiKey ? 'password' : 'text'" [(ngModel)]="apiKey" maxlength="100" (input)="cambioValorApiKey($event)" >
-      <mat-icon matSuffix (click)="visibilityApiKey = !visibilityApiKey">{{visibilityApiKey ? 'visibility_off' : 'visibility'}}</mat-icon>
-      <mat-icon matSuffix matTooltip="{{ 'generadores.jpromocion.principal.apikey.tooltip' | translate }}">help</mat-icon>
-      <mat-hint>{{ 'generadores.jpromocion.principal.apikey.tooltip' | translate }}</mat-hint>
-    </mat-form-field>
+
+    <img style="width: 100px;height:auto;" src="/generador.ico" alt="logo">
+
+    <div style="margin-top: 10px; max-width: 400px;">
+      <p>{{ 'generadores.jpromocion.descripcion' | translate }}</p>
+    </div>
 
     <input type="hidden" [(ngModel)]="mostrarApiUrlPorAsegurar"  >
 
-    <app-comprame-cafe style="margin-top: 40px;"></app-comprame-cafe>
+    <app-comprame-cafe style="margin-top: 10px;"></app-comprame-cafe>
 
-    <div style="margin-top: 40px; max-width: 400px;">
-      <p>{{ 'generadores.jpromocion.descripcion' | translate }}</p>
-    </div>
+
+      <!--EL item para rellenar el api-key con el que funcionaran todas las invocaciones-->
+      <mat-form-field style="min-width: 200px;width: auto !important; margin-top: 30px;">
+        <mat-label>{{ 'generadores.jpromocion.principal.apikey.label' | translate }}</mat-label>
+        <input matInput id="apiKey" [type]="visibilityApiKey ? 'password' : 'text'" [(ngModel)]="apiKey" maxlength="100" (input)="cambioValorApiKey($event)" >
+        <mat-icon matSuffix (click)="visibilityApiKey = !visibilityApiKey">{{visibilityApiKey ? 'visibility_off' : 'visibility'}}</mat-icon>
+        <mat-icon matSuffix matTooltip="{{ 'generadores.jpromocion.principal.apikey.tooltip' | translate }}">help</mat-icon>
+        <mat-hint>{{ 'generadores.jpromocion.principal.apikey.tooltip' | translate }}</mat-hint>
+      </mat-form-field>
 
     <app-messages style="margin-top: 20px;"></app-messages>
 
