--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -54,7 +54,7 @@
         </h1>
         <span style="display: flex;flex-direction: row; gap: 10px;">
           <img src="/bandera_es.png" class="{{ getBanderaClass('es') }}" style="height: 25px; width: 25px;" alt="es" (click)="cambiarIdioma('es')">
-          <img src="/bandera_gb.png" class="{{ getBanderaClass('en') }}" style="height: 25px; width: 25px;" alt="en" (click)="cambiarIdioma('en')">
+          <img src="/bandera_us.png" class="{{ getBanderaClass('en') }}" style="height: 25px; width: 25px;" alt="en" (click)="cambiarIdioma('en')">
         </span>
       </span>
     </mat-toolbar>
