- Titulo aplicación acortado para moviles

--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -57,7 +57,8 @@
         <h1>{{ 'generadores.jpromocion.titulo' | translate }}
         <a href="https://github.com/jpromocion/" target="_blank">jpromocion</a>
         -->
-        <h1>{{ 'generadores.jpromocion.titulocompleto' | translate }}
+        <!--style="overflow-wrap: break-word; word-break: break-word;white-space: pre-wrap"-->
+        <h1>{{ (isHandset$ | async) ? ('generadores.jpromocion.titulocorto' | translate) : ('generadores.jpromocion.titulocompleto' | translate) }}
         </h1>
         <span style="display: flex;flex-direction: row; gap: 10px;">
           <img src="/bandera_es.png" class="{{ getBanderaClass('es') }}" style="height: 25px; width: 25px;" alt="es" (click)="cambiarIdioma('es')">
